# raiders

./: .gitignore  Cargo.toml  README.md
assets/models/: crossbow.mtl  shack.mtl  tall_building.mtl
assets/prefabs/: player.ron  sphere.ron
assets/texture/: tree.mtl
assets/texture/gimp/: button.xcf  control_dogicon.xcf  control_droneicon.xcf  control_squadmembericon.xcf  mainmenu_container.xcf  optionsmenu_container.xcf  slider.xcf  slider_icon.xcf
assets/ui/: loading.ron  main_menu.ron
config/: bindings.ron  display.ron
src/: lib.rs  main.rs
src/state/: mod.rs
src/system/: control.rs
